--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -15,3 +15,21 @@
     padding: 5rem;
     height: 100%;
 }
+
+.h1 { 
+    font-family: 'Roboto';
+    font-weight: 100;
+    font-size: 40px;
+    color: black;
+}
+
+.h2 {
+    font-family: 'Roboto';
+    font-weight: 100;
+    font-size: 25px;
+    color: black;
+}
+
+#listings-div {
+    text-align: center;
+}   
