--- a/public/css/form.pages.css
+++ b/public/css/form.pages.css
@@ -12,6 +12,7 @@
     border-color: rgba(39, 76, 119, 1);
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
+    display: none;
 }
 
 #labels-1 {
@@ -66,7 +67,8 @@
     padding: 2.5rem;
     border-color: rgba(39, 76, 119, 1);
     margin-top: 2.5rem;
-    display: none;
+    /* display: none; */
+    margin-bottom: 2.5rem;
 }
 
 #footer {
@@ -74,4 +76,35 @@
     background: rgba(39, 76, 119, 1);
     padding: 1rem;
     color: white;
+    text-align: center;
+}
+
+.bread {
+    font-size: 20px;
+    font-family: 'Roboto' sans-serif;
+    font-weight: 500;
+}
+
+.submit-button {
+        padding: 1rem;
+        padding-right: 2rem;
+        padding-left: 2rem;
+        background: rgba(39, 76, 119, 1);;
+        color: white;
+        text-align: center;
+        font-family: 'Roboto' sans-serif;
+        font-weight: 100;
+        font-size: 18px;
+}
+
+#form-3 {
+    width: 50%; 
+    margin: 0 auto; 
+    border: solid; 
+    border-width: .5rem;
+    padding: 2.5rem;
+    border-color: rgba(39, 76, 119, 1);
+    margin-top: 2.5rem;
+    display: none;
+    margin-bottom: 2.5rem;
 }
