--- a/public/css/form.pages.css
+++ b/public/css/form.pages.css
@@ -12,7 +12,7 @@
     border-color: rgba(39, 76, 119, 1);
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
-    /* display: none; */
+    display: none;
 }
 
 #form-2 {
@@ -36,6 +36,54 @@
     border-color: rgba(39, 76, 119, 1);
     margin-top: 2.5rem;
     display: none;
+    margin-bottom: 2.5rem;
+}
+
+#form-4 {
+    width: 50%; 
+    margin: 0 auto; 
+    border: solid; 
+    border-width: .5rem;
+    padding: 2.5rem;
+    border-color: rgba(39, 76, 119, 1);
+    margin-top: 2.5rem;
+    display: none;
+    margin-bottom: 2.5rem;
+}
+
+#form-5 {
+    width: 50%; 
+    margin: 0 auto; 
+    border: solid; 
+    border-width: .5rem;
+    padding: 2.5rem;
+    border-color: rgba(39, 76, 119, 1);
+    margin-top: 2.5rem;
+    display: none;
+    margin-bottom: 2.5rem;
+}
+
+#form-6 {
+    width: 50%; 
+    margin: 0 auto; 
+    border: solid; 
+    border-width: .5rem;
+    padding: 2.5rem;
+    border-color: rgba(39, 76, 119, 1);
+    margin-top: 2.5rem;
+    display: none;
+    margin-bottom: 2.5rem;
+}
+
+#form-7 {
+    width: 50%; 
+    margin: 0 auto; 
+    border: solid; 
+    border-width: .5rem;
+    padding: 2.5rem;
+    border-color: rgba(39, 76, 119, 1);
+    margin-top: 2.5rem;
+    /* display: none; */
     margin-bottom: 2.5rem;
 }
 
@@ -83,8 +131,6 @@
     text-align: center;
 }
 
-
-
 #footer {
     width: 100%;
     background: rgba(39, 76, 119, 1);
@@ -110,4 +156,5 @@
         font-weight: 100;
         font-size: 18px;
 }
+
 
