--- a/public/css/form.pages.css
+++ b/public/css/form.pages.css
@@ -12,6 +12,7 @@
     border-color: rgba(39, 76, 119, 1);
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
+    /* display: none; */
 }
 
 #form-2 {
