--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -11,6 +11,7 @@
 .tab-div {
     border: solid;
     border-width: 5px;
+    border-color: rgba(39, 76, 119, 1);
     background: 'black';
     padding: 5rem;
     height: 100%;
@@ -31,5 +32,101 @@
 }
 
 #listings-div {
-    text-align: center;
+    /* text-align: center; */
 }   
+
+#navbar {
+    padding: .5rem;
+    background: rgba(39, 76, 119, 1);
+    color: white;
+}
+
+.submit-button {
+    padding: 1rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    background: white;
+    color: rgba(39, 76, 119, 1);;
+    text-align: center;
+    font-family: 'Roboto' sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.tab-div {
+    font-family: 'Montserrat' sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+}
+
+#listings-tab {
+    font-family: 'Montserrat' sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    color: rgba(39, 76, 119, 1);
+}
+
+#billing-tab {
+    font-family: 'Montserrat' sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    color: rgba(39, 76, 119, 1);
+}
+
+#profile-tab {
+    font-family: 'Montserrat' sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    color: rgba(39, 76, 119, 1);
+}
+
+#profile-form {
+    border: solid;
+    border-width: 5px;
+    border-color: rgba(39, 76, 119, 1);
+    padding: 1rem;
+}
+
+#labels-1 {
+    font-size: 20px;
+    font-family: 'Roboto' sans-serif;
+    font-weight: 100;
+}
+
+.form-header {
+    font-family: 'Montserrat';
+    font-weight: 700;
+    font-size: 20px;
+    margin: .25rem;
+}
+
+.listingItem {
+    border: solid;
+    border-color: rgba(39, 76, 119, 1);
+    border-width: 2px;
+    padding: 2rem;
+    position: relative;
+}
+
+.listingTitle {
+    font-family: 'Montserrat';
+    font-weight: 700;
+    color: rgba(39, 76, 119, 1);
+    display: inline;
+    font-size: 20px;
+}
+
+.listingSubtitle {
+    font-family: 'Montserrat';
+    font-weight: 300;
+    font-size: 16p;
+    color: grey;
+}
+
+.listing-buttons {
+    padding: 1rem;
+    background: rgba(39, 76, 119, 1);
+    color: white;
+    margin: .5rem;
+    text-align: center;
+}
