--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,7 +1,10 @@
 #form-container {
-    width: 100%; 
-    position: relative;
-
+    width: 50%; 
+    margin: 0 auto;
+    border: solid;
+    border-width: 5px;
+    padding: 2.5rem;
+    border-color: rgba(39, 76, 119, 1); 
 }
 
 #form {
