--- a/public/css/search.listings.css
+++ b/public/css/search.listings.css
@@ -44,8 +44,14 @@
     border: solid;
     border-width: 5px;
     border-color: rgba(39, 76, 119, 1); 
+    height: 100%;
+    position: relative;
+    overflow: hidden;
 }
 
 #map {
     height: 100%;
+    position: absolute;
+    height: 100%;
+    width: 100%;
   }
