--- a/public/css/search.listings.css
+++ b/public/css/search.listings.css
@@ -31,6 +31,7 @@
     padding: 2rem;
     margin-top: 1rem;
     margin-left: .5rem;
+    min-height: 85vh
 }
 
 #preview-container {
@@ -46,6 +47,7 @@
     height: 100%;
     position: relative;
     overflow: hidden;
+    max-height: 69vh;
 }
 
 #map {
