view listing page gets, loader, search on searched page

--- a/public/css/search.listings.css
+++ b/public/css/search.listings.css
@@ -38,6 +38,7 @@
     border: solid;
     border-width: 5px;
     border-color: rgba(39, 76, 119, 1); 
+    padding: 2.5rem;
 }
 
 #map-container {
@@ -47,7 +48,7 @@
     height: 100%;
     position: relative;
     overflow: hidden;
-    max-height: 69vh;
+    max-height: 61vh;
 }
 
 #map {
@@ -56,3 +57,7 @@
     height: 100%;
     width: 100%;
   }
+
+#search {
+    width: 100%;
+}
