--- a/public/css/listing.css
+++ b/public/css/listing.css
@@ -14,6 +14,7 @@
     font-weight: 700;
     font-size: 45px;
     color: rgba(39, 76, 119, 1);
+    margin: 0px;
 }
 
 .listing_h3 {
@@ -21,6 +22,7 @@
     font-weight: 500;
     font-size: 20px;
     color: rgba(39, 76, 119, 1);
+    margin: 0px;
 }
 
 .listing_p {
@@ -38,4 +40,11 @@
     position: relative;
     width: 15%;
     text-align: center;
+}
+
+.listing_category {
+    font-weight: 100;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    color: #c2c2c2;
 }
