--- a/public/css/listing.css
+++ b/public/css/listing.css
@@ -25,6 +25,14 @@
     margin: 0px;
 }
 
+.listing_category {
+    font-weight: 100;
+    font-family: 'Roboto';
+    font-size: 20px;
+    color: black;
+    margin-bottom: .5rem;
+}
+
 .listing_p {
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
@@ -42,9 +50,126 @@
     text-align: center;
 }
 
-.listing_category {
-    font-weight: 100;
+#store-info-div {
+    border: solid;
+    border-width: 5px;
+    border-color: rgba(39, 76, 119, 1);
+    /* height: 50%; */
+    padding: 1rem;
+    padding-bottom: 0rem;
+}
+
+.header-images {
+    margin: .5rem;
+}
+
+.image-columns {
+    margin: 0px;
+    padding: 0px;
+}
+
+#image-row {
+    padding: 0px;
+}
+
+#listing-column {
+    background: #f5f5f5;
+    padding: 3rem;
+}
+
+#listing_description {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    color: black;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+}
+
+#contact-text {
+    font-family: 'Roboto', sans-serif; 
+    font-weight: 300;
+    font-size: 25px;
+    margin: 0 auto;
+}
+
+.contact-info {
+    font-weight: 300;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    color: #c2c2c2;
+
 }
+
+.contact-item {
+    padding: 1rem;
+}
+
+#contact-list {
+    margin-top: 0rem;
+}
+
+#contact-hr {
+    margin-bottom: 0px;
+}
+
+#listing-header-buttons {
+    background: rgba(39, 76, 119, 1);
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+}
+
+#claimed {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    color: black;
+    font-size: 14px;
+    margin: 0px;
+}
+
+.nav-bar {
+    width: 100%;
+    margin: 0px;
+    padding: 1.5rem;
+    background: rgba(39, 76, 119, 1);
+    color: white;
+    position: relative;
+}
+
+.nav-h1 {
+    font-size: 40px;
+    font-weight: 700;
+    font-family: 'Montserrat' ;
+    display: inline;
+}
+
+#home-button {
+    padding: .75rem;
+    float: right;
+    background: white;
+    color: black;
+    position: relative;
+    width: 15%;
+    text-align: center;
+}
+
+#map-container {
+    border: solid;
+    border-width: 5px;
+    border-color: rgba(39, 76, 119, 1); 
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    max-height: 61vh;
+}
+
+#map {
+    height: 100%;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+  }
+
+
+  
