--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,8 +47,11 @@ html {
 
 /* landing */
 #landing-row {
-    background-image: linear-gradient(to right top, #112941, #294860, #446a7f, #628e9f, #83b3bf);
-
+    /* background-image: linear-gradient(to right top, #112941, #294860, #446a7f, #628e9f, #83b3bf); */
+    background: #4CA1AF;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #C4E0E5, #4CA1AF);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #C4E0E5, #4CA1AF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     height: 100vh;
     padding-bottom: 0px;
     padding-top: 0px;
