--- a/public/css/search.listings.css
+++ b/public/css/search.listings.css
@@ -61,3 +61,12 @@
 #search {
     width: 100%;
 }
+
+#no-results-text {
+    margin: 0 auto;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    margin-top: 5rem;
+}
