--- a/public/css/search.listings.css
+++ b/public/css/search.listings.css
@@ -2,15 +2,21 @@
     width: 100%;
     margin: 0px;
     padding: 1.5rem;
-    background: rgba(39, 76, 119, 1);
+    background: #3aa7a3;
     color: white;
     position: relative;
 }
 
+#page-container {
+    width: 100vw;
+
+    margin: 0px;
+  }
+
 .nav-h1 {
     font-size: 40px;
     font-weight: 700;
-    font-family: 'Montserrat' ;
+    font-family: 'Raleway' sans-serif;
     display: inline;
 }
 
@@ -26,25 +32,28 @@
 
 #listings-column {
     border: solid;
-    border-width: 5px;
-    border-color: rgba(39, 76, 119, 1); 
+    border-width: 0px 2.5px 2.5px 2.5px;
+    border-color: #8b786d; 
     padding: 2rem;
     margin-top: 1rem;
     margin-left: .5rem;
-    min-height: 85vh
+    min-height: 85vh; 
+    height: 90vh;
+    display: block;
+    overflow: hidden;
 }
 
 #preview-container {
-    border: solid;
+    /* border: solid;
     border-width: 5px;
-    border-color: rgba(39, 76, 119, 1); 
+    border-color: rgba(39, 76, 119, 1);  */
     padding: 2.5rem;
 }
 
 #map-container {
     border: solid;
-    border-width: 5px;
-    border-color: rgba(39, 76, 119, 1); 
+    border-width: 10px; 
+    border-color: #8b786d; 
     height: 100%;
     position: relative;
     overflow: hidden;
@@ -69,4 +78,11 @@
     font-weight: 700;
     font-size: 25px;
     margin-top: 5rem;
+}
+
+#listing-column-titlte {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 30px;
+    margin-bottom: .25rem;
 }
