--- a/public/css/search.listings.css
+++ b/public/css/search.listings.css
@@ -1,88 +1,149 @@
 .nav-bar {
-    width: 100%;
-    margin: 0px;
-    padding: 1.5rem;
-    background: #3aa7a3;
-    color: white;
-    position: relative;
+  width: 100%;
+  margin: 0px;
+  padding: 1.5rem;
+  background: #3aa7a3;
+  color: white;
+  position: relative;
 }
 
 #page-container {
-    width: 100vw;
+  width: 100vw;
 
-    margin: 0px;
-  }
+  margin: 0px;
+}
 
 .nav-h1 {
-    font-size: 40px;
-    font-weight: 700;
-    font-family: 'Raleway' sans-serif;
-    display: inline;
+  font-size: 40px;
+  font-weight: 700;
+  font-family: "Raleway" sans-serif;
+  display: inline;
 }
 
 #home-button {
-    padding: .75rem;
-    float: right;
-    background: white;
-    color: black;
-    position: relative;
-    width: 15%;
-    text-align: center;
+  padding: 0.75rem;
+  float: right;
+  background: white;
+  color: black;
+  position: relative;
+  width: 15%;
+  text-align: center;
 }
 
 #listings-column {
-    border: solid;
+  /* border: solid;
     border-width: 0px 2.5px 2.5px 2.5px;
-    border-color: #8b786d; 
-    padding: 2rem;
-    margin-top: 1rem;
-    margin-left: .5rem;
-    min-height: 85vh; 
-    height: 90vh;
-    display: block;
-    overflow: hidden;
+    border-color: #8b786d;  */
+  padding: 2rem;
+  margin-top: 1rem;
+  margin-left: 0.5rem;
+  min-height: 85vh;
+  height: 90vh;
+  display: block;
+  overflow: scroll;
 }
 
 #preview-container {
-    /* border: solid;
+  /* border: solid;
     border-width: 5px;
     border-color: rgba(39, 76, 119, 1);  */
-    padding: 2.5rem;
+  padding: 2.5rem;
 }
 
 #map-container {
-    border: solid;
-    border-width: 10px; 
-    border-color: #8b786d; 
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-    max-height: 61vh;
+  border: solid;
+  border-width: 10px;
+  border-color: #8b786d;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  max-height: 61vh;
 }
 
 #map {
-    height: 100%;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-  }
+  height: 100%;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
 
 #search {
-    width: 100%;
+  width: 100%;
 }
 
 #no-results-text {
-    margin: 0 auto;
-    text-align: center;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 25px;
-    margin-top: 5rem;
+  margin: 0 auto;
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 25px;
+  margin-top: 5rem;
 }
 
-#listing-column-titlte {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 30px;
-    margin-bottom: .25rem;
+#listing-column-title {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  margin-bottom: 0.25rem;
 }
+
+.listingItem-search {
+  border: solid;
+  border-color: #2ca6a4;
+  border-width: 2px;
+  border-radius: 25px;
+  position: relative;
+  background: #f5f5f5;
+}
+
+.listingTitle-search {
+  font-family: "Raleway";
+  font-weight: 700;
+  color: #8b786d;
+  display: inline;
+  font-size: 25px;
+}
+
+.listingSubtitle-search {
+  font-family: "Lato";
+  font-weight: 500;
+  font-size: 16px;
+  color: grey;
+}
+
+#listing-tagline-search {
+  font-family: "Lato";
+  font-weight: 300;
+  font-size: 16px;
+  margin-top: 1.5rem;
+  color: black;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.image-container {
+  position: relative;
+  height: 100%;
+}
+
+.listing-image {
+  position: absolute;
+  /* max-height: 100%; */
+  height: 100%;
+  max-width: 100%;
+}
+
+.listing-info-text {
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  color: grey;
+  margin: 0px;
+}
+
+.tag, .listing-tagline-search {
+    display: table-cell;
+    vertical-align: top;
+  }
