--- a/public/css/listing.css
+++ b/public/css/listing.css
@@ -1,200 +1,275 @@
-#page-container {
-    margin: 0px;
-    width: 100%;
+#listing-page-container {
+  margin: 0px;
+  width: 100%;
 }
 
 #listing-image {
-    height: auto;
-    width: 75%;
-    margin: 0 auto;
+  height: auto;
+  width: 75%;
+  margin: 0 auto;
 }
 
 .listing_h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    font-size: 45px;
-    color: rgba(39, 76, 119, 1);
-    margin: 0px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 45px;
+  color: #3aa7a3;
+  margin: 0px;
 }
 
 .listing_h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    color: rgba(39, 76, 119, 1);
-    margin: 0px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  color: rgba(39, 76, 119, 1);
+  margin: 0px;
 }
 
 .listing_category {
-    font-weight: 100;
-    font-family: 'Roboto';
-    font-size: 20px;
-    color: black;
-    margin-bottom: .5rem;
+  font-weight: 300;
+  font-family: "Roboto";
+  font-size: 20px;
+  color: grey;
+  margin-bottom: 0.5rem;
 }
 
 .listing_p {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
-    color: grey;
-    font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  color: grey;
+  font-size: 18px;
 }
 
 #back-button {
-    padding: .75rem;
-    float: right;
-    background: white;
-    color: black;
-    position: relative;
-    width: 15%;
-    text-align: center;
+  padding: 0.75rem;
+  float: right;
+  background: white;
+  color: black;
+  position: relative;
+  width: 15%;
+  text-align: center;
 }
 
 #store-info-div {
-    border: solid;
-    border-width: 5px;
-    border-color: rgba(39, 76, 119, 1);
-    padding: 1rem;
-    padding-bottom: 0rem;
-    overflow: hidden;
+  border: solid;
+  border-width: 5px;
+  border-color: #3aa7a3;
+  border-radius: 25px;
+  padding: 1.5rem;
+  padding-bottom: 0rem;
+  overflow: hidden;
+  margin-bottom: 1rem;
 }
 
 .header-images {
-    margin: .5rem;
+  margin: 0.5rem;
 }
 
 .image-columns {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 #image-row {
-    padding: 0px;
+  padding: 0px;
 }
 
 #listing-column {
-    background: #f5f5f5;
-    padding: 3rem;
+  background: #f5f5f5;
+  padding: 3rem;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
+
 #listing_description {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    font-size: 18px;
-    color: black;
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  color: black;
+  margin-top: 1rem;
+  margin-bottom: 2.5rem;
 }
 
 #contact-text {
-    font-family: 'Montserrat', sans-serif; 
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 25px;
+  margin: 0 auto;
+  color: #8b786d;;
+}
+
+#description-header {
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 25px;
     margin: 0 auto;
-}
-
+    color: #8b786d;;
+  }
+  
 .contact-info {
-    font-weight: 300;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-
+  font-weight: 300;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
 }
 
 .contact-item {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 #contact-list {
-    margin-top: 0rem;
+  margin-top: 0rem;
 }
 
 #contact-hr {
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 #listing-header-buttons {
-    background: rgba(39, 76, 119, 1);
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
-    font-size: 14px;
+  background: rgba(39, 76, 119, 1);
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-size: 14px;
 }
 
 #claimed {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    color: black;
-    font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  color: black;
+  font-size: 14px;
+  margin: 0px;
+}
+
+.nav-bar {
+  width: 100%;
+  margin: 0px;
+  padding: 1.5rem;
+  background: rgba(39, 76, 119, 1);
+  color: white;
+  position: relative;
+}
+
+.nav-h1 {
+  font-size: 40px;
+  font-weight: 700;
+  font-family: "Montserrat";
+  display: inline;
+}
+
+#home-button {
+  padding: 0.75rem;
+  float: right;
+  background: white;
+  color: black;
+  position: relative;
+  width: 15%;
+  text-align: center;
+}
+
+#map-container {
+  border: solid;
+  border-width: 5px;
+  border-color: #8b786d;
+  height: 50vh;
+  width: 50%;
+  position: relative;
+  overflow: hidden;
+  max-height: 61vh;
+  border-radius: 25px 25px 0px 0px;
+}
+
+#map {
+  height: 100%;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.section-header {
+  font-weight: 700;
+  font-size: 35px;
+  font-family: "Montserrat", sans-serif;
+  margin: 0px;
+  color: #3aa7a3;
+}
+
+#section-header {
+    font-weight: 700;
+    font-size: 35px;
+    font-family: "Montserrat", sans-serif;
     margin: 0px;
+    color: #3aa7a3;
+  }
+
+#location-address {
+  font-family: "Lato", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  display: inline;
+  color: #3aa7a3;
+
+}
+
+#get-direct {
+  margin: 0px;
+  width: 50%;
+  background: white;
+  border: solid;
+  border-width: 5px;
+  border-radius: 0px 0px 25px 25px;
+  border-top: 0px;
+  padding: 1rem;
+  border-color: #8b786d;
+  margin-bottom: 2rem;
 }
 
 .nav-bar {
     width: 100%;
     margin: 0px;
     padding: 1.5rem;
-    background: rgba(39, 76, 119, 1);
+    background: #3aa7a3;
     color: white;
     position: relative;
-}
-
-.nav-h1 {
+  }
+  
+  
+  
+  #page-container {
+    width: 100vw;
+    margin: 0px;
+    max-height: 100vh;
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .nav-h1 {
     font-size: 40px;
     font-weight: 700;
-    font-family: 'Montserrat' ;
+    font-family: "Raleway" sans-serif;
     display: inline;
-}
-
-#home-button {
-    padding: .75rem;
+  }
+  
+  #home-button {
+    padding: 0.75rem;
     float: right;
     background: white;
     color: black;
     position: relative;
     width: 15%;
     text-align: center;
-}
+  }
 
-#map-container {
-    border: solid;
-    border-width: 5px;
-    border-color: rgba(39, 76, 119, 1); 
-    height: 50vh;
-    position: relative;
-    overflow: hidden;
-    max-height: 61vh;
-    border-radius: 25px 25px 0px 0px;
-}
-
-#map {
-    height: 100%;
-    position: absolute;
-    height: 100%;
+  #back-button {
+    background: #9dd9d2;
+    font-family: "lato", sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    height: 101%;
+    display: table;
     width: 100%;
   }
 
-.section-header {
-    font-weight: 700;
-    font-size: 35px;
-    font-family: 'Montserrat', sans-serif;
-    margin: 0px;
-}
-
-#location-address {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    font-size: 14px;
-    display: inline;
-}
-
-#get-direct {
-    margin: 0px;
-    width: 100%;
-    background: white;
-    border: solid;
-    border-width: 5px;
-    border-radius: 0px 0px 25px 25px;
-    border-top: 0px;
-    padding: 1rem;
-    border-color: rgba(39, 76, 119, 1); 
-    margin-bottom: 2rem;
-}
+  #back-column {
+    padding: 0px;
+  }
