--- a/public/css/search.listings.css
+++ b/public/css/search.listings.css
@@ -169,9 +169,9 @@
     vertical-align: top;
   }
 
-  #back-column {
+ #back-column {
     padding: 0px;
-  }
+  } 
   
   #back-button {
     background: #9dd9d2;
@@ -188,3 +188,9 @@
       font-weight: 700;
       font-size: 14px;
   }
+
+  a:hover {
+      color: #3aa7a3;
+      text-decoration: underline;
+  }
+
