--- a/public/css/listing.css
+++ b/public/css/listing.css
@@ -3,6 +3,10 @@
   width: 100%;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 #listing-image {
   height: auto;
   width: 75%;
@@ -61,8 +65,10 @@
   margin-bottom: 1rem;
 }
 
-.header-images {
-  margin: 0.5rem;
+#header-image {
+  margin: 0 auto;
+  padding: 5rem;
+  padding-left: 1rem;
 }
 
 .image-columns {
@@ -81,7 +87,6 @@
   padding-bottom: 0px;
 }
 
-
 #listing_description {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
@@ -96,21 +101,23 @@
   font-weight: 700;
   font-size: 25px;
   margin: 0 auto;
-  color: #8b786d;;
+  color: #8b786d;
 }
 
 #description-header {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 700;
-    font-size: 25px;
-    margin: 0 auto;
-    color: #8b786d;;
-  }
-  
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 25px;
+  margin: 0 auto;
+  color: #8b786d;
+}
+
 .contact-info {
   font-weight: 300;
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 16px;
+  color: black;
+
 }
 
 .contact-item {
@@ -168,15 +175,15 @@
 }
 
 #map-container {
-  border: solid;
+  /* border: solid;
   border-width: 5px;
-  border-color: #8b786d;
-  height: 50vh;
-  width: 50%;
+  border-color: #8b786d; */
+  height: 35vh;
+  width: 100%;
+  margin-right: 0px;
   position: relative;
   overflow: hidden;
   max-height: 61vh;
-  border-radius: 25px 25px 0px 0px;
 }
 
 #map {
@@ -187,89 +194,139 @@
 }
 
 .section-header {
-  font-weight: 700;
-  font-size: 35px;
-  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 25px;
+  font-family: "Raleway", sans-serif;
   margin: 0px;
-  color: #3aa7a3;
+  margin-bottom: 1rem;
+  color: black;
 }
 
 #section-header {
-    font-weight: 700;
-    font-size: 35px;
-    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 25px;
+    font-family: "Raleway", sans-serif;
     margin: 0px;
-    color: #3aa7a3;
-  }
+    color: black;
+}
 
 #location-address {
   font-family: "Lato", sans-serif;
   font-weight: 500;
   font-size: 16px;
   display: inline;
-  color: #3aa7a3;
-
+  color: black;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 #get-direct {
   margin: 0px;
-  width: 50%;
-  background: white;
-  border: solid;
+  /* width: 50%; */
+  /* border: solid;
   border-width: 5px;
   border-radius: 0px 0px 25px 25px;
-  border-top: 0px;
-  padding: 1rem;
-  border-color: #8b786d;
+  border-top: 0px; */
+  /* padding: 1rem; */
+  /* border-color: #8b786d; */
   margin-bottom: 2rem;
 }
 
 .nav-bar {
-    width: 100%;
-    margin: 0px;
-    padding: 1.5rem;
-    background: #3aa7a3;
-    color: white;
-    position: relative;
-  }
-  
-  
-  
-  #page-container {
-    width: 100vw;
-    margin: 0px;
-    max-height: 100vh;
-    position: relative;
+  width: 100%;
+  margin: 0px;
+  padding: 1.5rem;
+  background: #3aa7a3;
+  color: white;
+  position: relative;
+}
+
+#page-container {
+  width: 100vw;
+  margin: 0px;
+  max-height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.nav-h1 {
+  font-size: 40px;
+  font-weight: 700;
+  font-family: "Raleway" sans-serif;
+  display: inline;
+}
+
+#home-button {
+  padding: 0.75rem;
+  float: right;
+  background: white;
+  color: black;
+  position: relative;
+  width: 15%;
+  text-align: center;
+}
+
+#back-button {
+  background: #9dd9d2;
+  font-family: "lato", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  height: 101%;
+  display: table;
+  width: 100%;
+}
+
+#back-column {
+  padding: 0px;
+}
+
+.slick-arrow:before {
+  color: black;
+}
+
+.slick-initialized .slick-track {
+    display: flex;
+    align-items: center;
+    max-height: 35vh;
+}
+
+#direction-link {
     overflow: hidden;
-  }
-  
-  .nav-h1 {
-    font-size: 40px;
-    font-weight: 700;
-    font-family: "Raleway" sans-serif;
-    display: inline;
-  }
-  
-  #home-button {
-    padding: 0.75rem;
-    float: right;
-    background: white;
-    color: black;
-    position: relative;
-    width: 15%;
-    text-align: center;
-  }
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
 
-  #back-button {
-    background: #9dd9d2;
-    font-family: "lato", sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-    height: 101%;
-    display: table;
-    width: 100%;
-  }
+#website-div {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
 
-  #back-column {
-    padding: 0px;
-  }
+#website-link {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+
+#title-section {
+    margin-bottom: 1rem;
+}
+
+#hours-column {
+    padding: 2rem;
+}
+
+.hours-text {
+    font-family: 'Lato';
+    font-weight: 300;
+    font-size: 16px;
+}
+
+
+
