--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,6 +40,39 @@ body {
   width: 100%;
   margin-bottom: 0.5rem;
 }
+.box-button {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  width: auto;
+  margin-bottom: 0.5rem;
+  background: #1f7a8c;
+  text-align: center;
+  transition: all 0.5s;
+  cursor: pointer
+}
+.box-button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+.box-button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+.box-button:hover span {
+  padding-right: 25px;
+}
+
+.box-button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
 
 .header-icon-color {
   color: white;
@@ -178,7 +211,7 @@ body {
   font-size: 18px;
   color: white;
   padding: 1rem;
-  display: inline;
+  /* display: inline; */
 }
 
 .link-columns {
@@ -199,7 +232,7 @@ body {
   padding: 1rem;
   width: 100%;
 }
-
+/* 
 #contact {
   position: absolute;
   left: 85%;
@@ -208,7 +241,7 @@ body {
 #about {
   position: absolute;
   left: 78%;
-}
+} */
 
 #landing-inner-row {
   padding: 0.5rem;
@@ -221,7 +254,7 @@ body {
   color: white;
   line-height: 1.2em;
   margin-bottom: 0.5rem;
-  margin-top: 5rem;
+  margin-top: 2.2rem;
 }
 
 #how-column {
@@ -568,11 +601,6 @@ body {
   text-align: center;
 }
 
-#magazine {
-  /* margin-right: 5rem; */
-
-}
-
 #testimonial-row {
   background-image: url(../images/landing-4-overlay2.jpg);
   height: 75vh;
@@ -616,7 +644,7 @@ body {
 }
 
 #how-it-next {
-  background: #79bcb8;
+  background: #f9f9f9;
 }
 
 #step-1 {
@@ -625,7 +653,8 @@ body {
 }
 
 #step-1-col-l {
-  background: #f9f9f9;
+  background: white;
+  padding: 3.5rem;
 }
 
 #step-1-col-b {
@@ -636,9 +665,21 @@ body {
 
 #step-1-gif-img {
   display: inline-block;
-  border: solid;
-  border-width: 45px;
-  border-color: #8b786d;
+  /* border: solid;
+  border-width: 5px 5px 0px 0px;
+  border-color: #8b786d; */
+  box-shadow:
+  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+  0 12.5px 10px rgba(0, 0, 0, 0.06),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  0 100px 80px rgba(0, 0, 0, 0.12)
+;
+
+  margin: 100px auto;
+  background: white;
+  /* border-radius: 5px; */
 }
 
 #step-1-num {
@@ -687,20 +728,33 @@ body {
 
 #step-2-col-l {
   background: #f9f9f9;
+  padding: 3.5rem;
 }
 
 #step-2-col-b {
   background: #79bcb8;
   text-align: center;
   height: 100%;
-  padding: 3rem;
+  /* padding: 3rem; */
 }
 
-#step-2-gif-img {
+#step-2-img {
   display: inline-block;
-  border: solid;
-  border-width: 45px;
-  border-color: #8b786d;
+  /* border: solid;
+  border-width: 5px 5px 0px 0px;
+  border-color: #8b786d; */
+  box-shadow:
+  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+  0 12.5px 10px rgba(0, 0, 0, 0.06),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  0 100px 80px rgba(0, 0, 0, 0.12)
+;
+
+  margin: 100px auto;
+  background: white;
+  /* border-radius: 5px; */
 }
 
 #step-2-num {
@@ -735,24 +789,46 @@ body {
   padding: 0px;
   background: #79bcb8;
   border-bottom: solid #8b786d 2.5px;
-
+  height: 90vh;
 }
 
 #step-3-col-l {
-  background: #f9f9f9;
+  background: #79bcb8;
+  padding: 3.5rem;
+}
+
+#shadow-3 {
+  /* display: inline-block; */
+  /* border: solid;
+  border-width: 5px 5px 0px 0px;
+  border-color: #8b786d; */
+  box-shadow:
+  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+  0 12.5px 10px rgba(0, 0, 0, 0.06),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  0 100px 80px rgba(0, 0, 0, 0.12)
+;
+  padding: 3.5rem;
+  margin: 100px auto;
+  background: white;
+  /* border-radius: 5px; */
+}
+
+#step-3-img {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
 }
 
 #step-3-col-b {
+  position: relative;
   background: #79bcb8;
   text-align: center;
   padding: 3rem;
-}
-
-#step-3-gif-img {
-  display: inline-block;
-  border: solid;
-  border-width: 45px;
-  border-color: #8b786d;
+  padding-right: 0px;
+  padding-bottom: 0px;
 }
 
 #step-3-num {
@@ -772,13 +848,6 @@ body {
   text-align: left;
   color: #8b786d;
 }
-
-/* #step-3-demo {
-  border: solid;
-  border-color: #8b786d;
-  border-width: 20px;
-  padding: 5rem;
-} */
 
 #step-3-content {
   line-height: 1.85em;
@@ -837,11 +906,166 @@ body {
   
   min-height: 200px;
   /* width: 50vw; */
-  margin: 100px auto;
+  margin: 25px auto;
   background: white;
   border-radius: 5px;
 }
 
+#problems-section {
+  padding: 10rem;
+  padding-top: 12.5rem;
+  padding-bottom: 5rem;
+  width:100%;
+  background: #f9f9f9;
+  margin-right: 0px;
+  margin-left: 0px;
+  height: 90vh;
+}
+
+#problems-title {
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 50px;
+  letter-spacing: -1.5px;
+  color: #8b786d;
+  margin-bottom: 1rem;
+}
+
+.serif-strong {
+  font-family: 'Libre Baskerville';
+  font-weight: 700;
+  font-size: 35px;
+  letter-spacing: -1px;
+  margin-bottom: 1rem;
+}
+
+#problems-text {
+  font-family: 'Lato';
+  font-weight: 300;
+  font-size: 35px;
+  color: #696969;
+}
+
+#steps-arrow-text {
+  font-family: 'Raleway';
+  font-size: 20px;
+  color: #696969;
+  font-weight: 500;
+  margin-top: 12.5rem;
+}
+
+#or-text {
+  font-family: 'Raleway';
+  font-size: 16px;
+  color: black;
+  font-weight: 500;
+  margin-left: 16rem;
+}
+
+#why-section {
+  background: #f9f9f9;
+  border: solid;
+  border-width: 0px 0px 5px 0px;
+  border-color: #8b786d;
+}
+
+#business-img-col {
+  position: relative;
+  padding-right: 0px;
+}
+
+#business-mag-img {
+  -webkit-transform:rotate(-15deg);
+  -moz-transform: rotate(-15deg);
+  -ms-transform: rotate(-15deg);
+  -o-transform: rotate(-15deg);
+  transform: rotate(-15deg);
+  margin: 0 auto;
+  padding-right: 0px;
+}
+
+#title-col {
+  padding: 5rem;
+  padding-bottom: 3.5rem;
+}
+
+#why-title {
+  font-family: 'Libre Baskerville';
+  font-weight: 700;
+  font-size: 45px;
+  letter-spacing: -1.5px;
+  margin-bottom: 1rem;
+}
+
+.why-text {
+  font-family: 'Source Sans Pro';
+  font-weight: 300;
+  font-size: 25px;
+  color: black;
+}
+
+.why-header {
+  font-family: 'Libre Baskerville';
+  font-weight: 700;
+  font-size: 35px;
+  letter-spacing: -2px;
+  margin-bottom: 1rem;
+  color: #696969;
+}
+
+#why-list {
+  list-style-type: square;
+}
+
+#business-cta-section {
+  padding: 2rem;
+  border: solid;
+  border-width: 0px 0px 5px 0px;
+  border-color: #8b786d;
+}
+
+.cta-title {
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 40px;
+  color: black;
+}
+
+#cta-title-col {
+  padding: 2.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.cta-header {
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 35px;
+  margin-bottom: 1rem;
+  color: #696969;
+}
+
+.cta-text {
+  font-family: 'Lato';
+  font-weight: 300;
+  font-size: 25px;
+  color: black;
+}
+
+.rale-strong {
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 30px;
+  letter-spacing: -1px;
+  margin-bottom: 1rem;
+}
+
+.slick-slide {
+  text-align: center;
+}
+
+#menu-col {
+  margin-bottom: 1rem;
+}
 @media only screen and (max-width: 600px) {
   #ha-title {
     margin-left: 0px;
