--- a/public/css/form.pages.css
+++ b/public/css/form.pages.css
@@ -1,6 +1,7 @@
 #form-page-container {
     margin: 0px;
     width: 100%;
+    margin-bottom: 1rem;
 }
 
 #form-1 {
@@ -9,19 +10,19 @@
     border: solid; 
     border-width: .5rem;
     padding: 2.5rem;
-    border-color: rgba(39, 76, 119, 1);
+    border-color: #1F7A8C;
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
-    /* display: none; */
+    display: none;
 }
 
 #form-2 {
-    width: 50%; 
+    width: 65%; 
     margin: 0 auto; 
     border: solid; 
     border-width: .5rem;
     padding: 2.5rem;
-    border-color: rgba(39, 76, 119, 1);
+    border-color: #1F7A8C;
     margin-top: 2.5rem;
     display: none;
     margin-bottom: 2.5rem;
@@ -33,7 +34,7 @@
     border: solid; 
     border-width: .5rem;
     padding: 2.5rem;
-    border-color: rgba(39, 76, 119, 1);
+    border-color: #1F7A8C;
     margin-top: 2.5rem;
     display: none;
     margin-bottom: 2.5rem;
@@ -45,7 +46,7 @@
     border: solid; 
     border-width: .5rem;
     padding: 2.5rem;
-    border-color: rgba(39, 76, 119, 1);
+    border-color: #1F7A8C;
     margin-top: 2.5rem;
     display: none;
     margin-bottom: 2.5rem;
@@ -57,7 +58,7 @@
     border: solid; 
     border-width: .5rem;
     padding: 2.5rem;
-    border-color: rgba(39, 76, 119, 1);
+    border-color: #1F7A8C;
     margin-top: 2.5rem;
     display: none;
     margin-bottom: 2.5rem;
@@ -69,9 +70,9 @@
     border: solid; 
     border-width: .5rem;
     padding: 2.5rem;
-    border-color: rgba(39, 76, 119, 1);
+    border-color: #1F7A8C;
     margin-top: 2.5rem;
-    display: none;
+    /* display: none; */
     margin-bottom: 2.5rem;
 }
 
@@ -81,7 +82,7 @@
     border: solid; 
     border-width: .5rem;
     padding: 2.5rem;
-    border-color: rgba(39, 76, 119, 1);
+    border-color: #1F7A8C;
     margin-top: 2.5rem;
     display: none;
     margin-bottom: 2.5rem;
@@ -89,36 +90,22 @@
 
 #labels-1 {
     font-size: 25px;
-    font-family: 'Roboto' sans-serif;
-    font-weight: 100;
+    font-family: 'Lato' sans-serif;
+    font-weight: 300;
 }
 
 .form-h1 {
-    font-size: 35px;
+    font-size: 50px;
     font-weight: 700;
-    font-family: 'Montserrat' ;
+    font-family: 'Raleway';
+    text-align: center;
+    color: #696969;
 }
 
 .form-h3 {
     font-size: 25px;
     font-weight: 300;
-    font-family: 'Montserrat';  
-}
-
-.nav-bar {
-    width: 100%;
-    margin: 0px;
-    padding: 1.5rem;
-    background: rgba(39, 76, 119, 1);
-    color: white;
-    position: relative;
-}
-
-.nav-h1 {
-    font-size: 40px;
-    font-weight: 700;
-    font-family: 'Montserrat' ;
-    display: inline;
+    font-family: 'Lato';  
 }
 
 #back-button {
@@ -133,7 +120,7 @@
 
 #footer {
     width: 100%;
-    background: rgba(39, 76, 119, 1);
+    background: #1F7A8C;
     padding: 1rem;
     color: white;
     text-align: center;
@@ -141,7 +128,7 @@
 
 .bread {
     font-size: 20px;
-    font-family: 'Roboto' sans-serif;
+    font-family: 'Lato' sans-serif;
     font-weight: 500;
 }
 
@@ -149,12 +136,31 @@
         padding: 1rem;
         padding-right: 2rem;
         padding-left: 2rem;
-        background: rgba(39, 76, 119, 1);;
+        background: #1F7A8C;;
         color: white;
         text-align: center;
-        font-family: 'Roboto' sans-serif;
+        font-family: 'Lato' sans-serif;
         font-weight: 100;
         font-size: 18px;
 }
 
+#back-button {
+    background: #9dd9d2;
+    font-family: "lato", sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    height: 101%;
+    display: table;
+    width: 100%;
+  }
 
+  #back-column {
+    padding: 0px;
+  }
+
+  #progress-bar {
+      margin-bottom: 0px;
+      position: fixed;
+      bottom: 0rem;
+
+  }
