--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -93,7 +93,7 @@ body {
     background: -webkit-linear-gradient(to right, #C4E0E5, #4CA1AF);  
     background: linear-gradient(to right, #C4E0E5, #4CA1AF);  */
   padding: 0px;
-  background: #2ca6a4;
+  background: #1F7A8C;
 }
 
 #sign-in-column {
