--- a/public/css/listing.css
+++ b/public/css/listing.css
@@ -328,6 +328,12 @@ a:hover {
     font-size: 16px;
 }
 
+.faq-header {
+  font-family: 'Raleway';
+  font-weight: 500;
+  font-size: 18px;
+}
+
 #listBusiness-button {
   background: #1f7a8c;
 }
@@ -340,5 +346,19 @@ a:hover {
   padding: 0.5rem;
 }
 
+hr.style14 { 
+  border: 0; 
+  height: 1px; 
+  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
+}
+
+.section-title {
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 20px;
+}
 
 
