--- a/public/css/billing.css
+++ b/public/css/billing.css
@@ -91,3 +91,12 @@ body {
       font-size: 16px;
       color: black;
   }
+
+  #back-p {
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+    background: #f9f9f9;
+    color: #1f7a8c;
+    padding: 0.5rem;
+  }
