--- a/public/css/search.listings.css
+++ b/public/css/search.listings.css
@@ -194,3 +194,12 @@
       text-decoration: underline;
   }
 
+  #back-p {
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+    background: #f9f9f9;
+    color: #1f7a8c;
+    padding: 0.5rem;
+  }
+
