--- a/public/css/form.pages.css
+++ b/public/css/form.pages.css
@@ -5,7 +5,7 @@
 }
 
 #form-1 {
-    width: 50%; 
+    /* width: 50%;  */
     margin: 0 auto; 
     border: solid; 
     border-width: .5rem;
@@ -18,7 +18,6 @@
 }
 
 #form-2 {
-    width: 65%; 
     margin: 0 auto; 
     border: solid; 
     border-width: .5rem;
