--- a/public/css/search.listings.css
+++ b/public/css/search.listings.css
@@ -132,12 +132,11 @@
   font-family: "Lato";
   font-weight: 300;
   font-size: 16px;
-  margin-top: 1.5rem;
-  color: black;
-  overflow: hidden;
+  color: #696969;
+  /* overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical; */
 }
 
 .image-container {
