--- a/public/css/billing.css
+++ b/public/css/billing.css
@@ -73,7 +73,7 @@ body {
       font-family: 'Lato';
       font-weight: 300;
       font-size: 20px;
-      color: #696969;
+      color: white;
       text-align: center;
   }
 
@@ -81,7 +81,7 @@ body {
     font-family: 'Lato';
     font-weight: 300;
     font-size: 20px;
-    color: #696969;
+    color: white;
     text-align: center;
 }
 
